--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,6 +2,9 @@
 
   @mixin clearfix;
 
+  &--t-padding {
+    padding-top: 80px;
+  }
 
   &--gutters {
     margin-right: -65px;
@@ -9,6 +12,10 @@
 
   &--gutters-large {
     margin-right: -100px;
+  }
+
+  &--gutters-small {
+    margin-right: -45px;
   }
 
   &--gutters > div {
@@ -19,10 +26,13 @@
     padding-right: 100px;
   }
 
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
+
   &__b-margin-until-medium {
     margin-bottom: 1rem;
   }
-
 
   @mixin atMedium {
 
@@ -40,7 +50,7 @@
     }
 
     &__medium-6 {
-      float:left;
+      float: left;
       width: 50%;
     }
 
@@ -51,6 +61,64 @@
 
     &__medium-8--smaller {
       width: 63%;
+    }
+
+  }
+
+
+    @mixin atLarge {
+
+      &__b-margin-until-large {
+        margin-bottom: 0;
+      }
+
+      &__large-4 {
+        float: left;
+        width: 33.33%;
+      }
+
+      &__large-4--larger {
+        width: 37%;
+      }
+
+      &__large-6 {
+        float: left;
+        width: 50%;
+      }
+
+      &__large-8 {
+        float: left;
+        width: 66.66%;
+      }
+
+      &__large--smaller {
+        width: 63%;
+      }
+
+    }
+
+
+  /* Begin Equal Height Rules */
+  &--equal-height-at-medium {
+    @mixin atMedium {
+      display: flex;
+    }
+
+    & > div {
+      float: none;
+      display: flex;
+    }
+
+  }
+
+  &--equal-height-at-large {
+    @mixin atLarge {
+      display: flex;
+    }
+
+    & > div {
+      float: none;
+      display: flex;
     }
 
   }
