--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -1,12 +1,12 @@
 .primary-nav {
-padding-top: 10px;
+  padding-top: 10px;
 
-mixin atMedium {
-  padding-top: 0;
-}
+  @mixin atMedium {
+    padding-top: 0;
+  }
 
-  &--pull-right{
-    @mixin atMedium{
+  &--pull-right {
+    @mixin atMedium {
       float: right;
     }
   }
@@ -44,10 +44,14 @@ mixin atMedium {
     font-size: .8rem;
     background-color: rgba($mainBlue, .5);
 
-    @mixin atMedium{
-      background-color: transparent;
+    @mixin atMedium {
       font-size: 1rem;
       padding: 12px 0;
+      background-color: transparent;
+
+      &.is-current-link {
+        color: #fabb69;
+      }
     }
   }
 }
