--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -9,16 +9,19 @@
     background-color: rgba($mainBlue, .55);
   }
 
-
   @mixin atMedium {
+    position: fixed;
     background-color: rgba($mainBlue, .3);
+
+    &--dark {
+      background-color: rgba(23, 51, 72, .85);
+    }
   }
 
   &__btn-container {
     @mixin atMedium {
-        float: right;
+      float: right;
     }
-
   }
 
   &__logo {
@@ -26,6 +29,7 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%) scale(.8);
+    transition: transform .3s ease-out;
     transform-origin: 50% 0;
     background-color: $mainBlue;
     padding: 25px 36px;
@@ -33,26 +37,30 @@
     @mixin atMedium {
       left: auto;
       transform: translateX(0);
+        /*runs only when the logo has a class .site-header--dark*/
+      .site-header--dark & {
+        transform: scale(.57);
+      }
     }
   }
 
   &__logo__graphic {
-    text-indent:-9999px;
+    text-indent: -9999px;
   }
 
   &__menu-icon {
     width: 20px;
     height: 19px;
     position: absolute;
-    right: 10px;
-    top: 10px;
     z-index: 10;
+    top: 10px;
+    right: 10px;
 
     &::before {
       content: "";
       position: absolute;
       top: 0;
-      left:0;
+      left: 0;
       width: 20px;
       height: 3px;
       background-color: #FFF;
@@ -61,9 +69,9 @@
     }
 
     &__middle {
-      position:absolute;
+      position: absolute;
       top: 8px;
-      left:0;
+      left: 0;
       width: 20px;
       height: 3px;
       background-color: #FFF;
@@ -73,15 +81,14 @@
 
     &::after {
       content: "";
-      position:absolute;
+      position: absolute;
       bottom: 0;
-      left:0;
+      left: 0;
       width: 20px;
       height: 3px;
       background-color: #FFF;
       transform-origin: 0 100%;
       transition: transform .3s ease-out;
-
     }
 
     @mixin atMedium {
@@ -106,9 +113,8 @@
 
   &__menu-content {
     opacity: 0;
-    transform: scale(1.2);/*zooming effect*/
+    transform: scale(1.2);
     transition: all .3s ease-out;
-    /*we could use display: none*/
     position: relative;
     z-index: -10;
     padding-top: 90px;
@@ -118,7 +124,7 @@
       opacity: 1;
       z-index: 1;
       padding-top: 0;
-      transform:scale(1);
+      transform: scale(1);
     }
 
     &--is-visible {
