--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,10 +1,10 @@
 .wrapper {
+  overflow: hidden;
   padding-left: 18px;
   padding-right: 18px;
   max-width: 1236px;
   margin-left: auto;
   margin-right: auto;
-  overflow: hidden;
 
   &--medium {
     max-width: 976px;
@@ -30,7 +30,8 @@
     }
   }
 
-  .wrapper { /*wrapper nested in another wrapper*/
+/*wrapper nested in another wrapper*/
+  .wrapper {
     padding-left: 0;
     padding-right: 0;
   }
@@ -38,9 +39,9 @@
   &--b-margin {
     margin-bottom: 1rem;
 
-    @mixin atSmall{
-    margin-bottom: 3.875rem;
+    @mixin atSmall {
+      margin-bottom: 3.875rem;
+    }
   }
 
-  }
 }
