--- a/gulp/templates/sprite.css
+++ b/gulp/templates/sprite.css
@@ -1,8 +1,13 @@
-
+/*Do not edit modules/_sprite directly as it is generated automatically by Gulp. Instead edit gulp/templates/sprite*/
 {{#shapes}}
   {{#first}}
   .icon {
         background-image: url('/assets/images/sprites/{{{sprite}}}');
+  }
+
+
+  .no-svg .icon {
+    background-image: url('/assets/images/sprites/{{#replaceSvgWithPng}}{{{sprite}}}{{/replaceSvgWithPng}}');
   }
   {{/first}}
   .icon--{{base}} {
